# stream-things

./: .gitignore  .pre-commit-config.yaml  anonymize.py  pyproject.toml  requirements.txt  server.sh  stream.py
.github/workflows/: tests.yml
streamit/: anonymize.py  stream.py
tests/: test_anonimizes.py
